Fix docker compose syntaxsis for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,4 +70,4 @@ jobs:
 
       - name: Build Docker image (smoke test)
         run: |
-          docker-compose build web
+          docker compose build web
